syntax = "proto3";

option java_multiple_files = true;
option java_package = "dgo.dgmt.items";
option java_outer_classname = "ItemsProto";

service ItemsService {
  rpc GetItems(GetItemsRequest) returns (stream Item);
  rpc GetAll(AllItemsRequest) returns (stream Item);
}

message AllItemsRequest {
}

message GetItemsRequest {
  string name_query = 1;
}

message GetItemsResponse {
  Item items = 1;
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
}